--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light p-4" style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light p-3" style="background-color: #e3f2fd;">
     <div class="container-fluid">
       <a class="navbar-brand fs-3 fw-bold" href="/"><i class="fa-solid fa-book mx-3"></i>Tutor</a>
       {{#if user}}
@@ -10,11 +10,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item d-inline-flex align-items-center">
-            <a href="/users/{{user.id}}" class="nav-link">{{user.name}}</a>
+            <a href="/profile/{{user.id}}" class="nav-link">{{user.name}}</a>
           </li>
+          {{!-- {{#ifCond user.teachStyle user.isAdmin}} --}}
           <li class="nav-item">
-            <a href="/users/{{user.id}}" class="nav-link">成為老師</a>
+            <a href="/teachers" class="nav-link">成為老師</a>
           </li>
+          {{!-- {{/ifCond}} --}}
           <li class="nav-item position-absolute top-50 end-0 translate-middle-y me-4">
             <a href="/logout"><button class="btn btn-outline-success my-sm-0 my-2">Logout</button></a>
           </li>
