--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,6 +1,6 @@
 {{>messages}}
 <div class="mb-4 text-center">
-  <h1 class="h3 font-weight-normal mb-3">Sign In</h1>
+  <h1 class="h3 font-weight-normal my-3">Sign In</h1>
 </div>
 <form class="form-signin" action="/signin" method="POST">
   <div class="form-row mb-3">
