--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,11 +1,11 @@
 {{>messages}}
 <div class="mb-4 text-center">
-  <h1 class="h3 font-weight-normal mb-3">Sign Up</h1>
+  <h1 class="h3 font-weight-normal my-3">Sign Up</h1>
 </div>
 <form class="form-signup" action="/signup" method="POST" style="width: 100%;">
   <div class="form-row mb-3">
     <label class="form-label" for="name">Name</label>
-    <input type="text" id="name" name="name" class="form-control" placeholder="Name" required autofocus value="{{user.name}}">
+    <input type="text" id="name" name="name" class="form-control" placeholder="Name" required autofocus>
   </div>
   <div class="form-row mb-3">
     <label class="form-label" for="email">Email</label>
