--- a/views/teachers/teacherInfo.hbs
+++ b/views/teachers/teacherInfo.hbs
@@ -1,47 +1,45 @@
 {{>messages}}
 <h1 class="mb-3 restaurant-show-title">成為老師</h1>
 <div class="container">
+  {{#unless user.teachStyle}}
   <form action="/teachers" method="POST">
+  {{else}}
+  <form action="/teachers/edit?_method=PUT" method="POST">
+  {{/unless}}
     <div class="my-5">
       <label for="introdution" class="form-label">Your Introdution<span class="text-danger">*</span></label>
-      <textarea class="form-control" id="introdution" rows="5" name="introdution" placeholder="please intoduce yourself"
-        required></textarea>
+      <textarea class="form-control" id="introdution" rows="5" name="introdution" placeholder="please intoduce yourself" required>{{user.introdution}}</textarea>
     </div>
     <div class="my-5">
       <label for="teachstyle" class="form-label">Your Teaching Style<span class="text-danger">*</span></label>
-      <textarea class="form-control" id="teachstyle" rows="5" name="teachStyle" placeholder="please describe"
-        required></textarea>
+      <textarea class="form-control" id="teachstyle" rows="5" name="teachStyle" placeholder="please describe" required>{{user.teachStyle}}</textarea>
     </div>
-
     <div class="mb-3 row g-3">
       <div class="col-md-6">
         <label for="category" class="form-label">開始時間<span class="text-danger">*</span></label>
-        <select type="date" id="startTime" name="startTime" class="form-select" aria-label="Default select example"
-          required>
+        <select type="date" id="startTime" name="startTime" class="form-select" aria-label="Default select example" value="{{lesson}}" required>
           <option value="" selected disabled>--請選擇時段--</option>
-          <option value="18:00">18:00</option>
-          <option value="18:30">18:30</option>
-          <option value="19:00">19:00</option>
-          <option value="19:30">19:30</option>
-          <option value="20:00">20:00</option>
-          <option value="20:30">20:30</option>
+          <option value="18:00" {{#ifEqual lesson.startTime "18:0"}}selected{{/ifEqual}}>18:00</option>
+          <option value="18:30" {{#ifEqual lesson.startTime "18:30"}}selected{{/ifEqual}}>18:30</option>
+          <option value="19:00" {{#ifEqual lesson.startTime "19:0"}}selected{{/ifEqual}}>19:00</option>
+          <option value="19:30" {{#ifEqual lesson.startTime "19:30"}}selected{{/ifEqual}}>19:30</option>
+          <option value="20:00" {{#ifEqual lesson.startTime "20:0"}}selected{{/ifEqual}}>20:00</option>
+          <option value="20:30" {{#ifEqual lesson.startTime "20:30"}}selected{{/ifEqual}}>20:30</option>
         </select>
       </div>
       <div class="col-md-6">
         <label for="category" class="form-label">單堂課程時間 (分鐘)<span class="text-danger">*</span></label>
-        <select type="text" id="usageTime" name="usageTime" class="form-select" aria-label="Default select example"
-          disabled required>
+        <select type="text" id="usageTime" name="usageTime" class="form-select" aria-label="Default select example" value="{{lesson.usageTime}}" {{#ifEqual lesson.usageTime undefined}}disabled{{/ifEqual}} required >
           <option value="" disabled selected>--請選擇上課時長--</option>
-          <option value="30">30</option>
-          <option id="hour" value="60">60</option>
+          <option value="30" {{#ifEqual lesson.usageTime 30}}selected{{/ifEqual}}>30</option>
+          <option id="hour" value="60" {{#ifEqual lesson.usageTime 60}}selected{{/ifEqual}}>60</option>
         </select>
       </div>
     </div>
     <div class="mb-3">
       <label for="image" class="form-label">課程視訊連結<span class="text-danger">*</span></label>
-      <input type="url" class="form-control" id="link" name="link" required />
+      <input type="url" class="form-control" id="link" name="link" value='{{lesson.link}}' required />
     </div>
-
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="checkbox" name="days" value="1">
       <label class="form-check-label" for="inlineCheckbox1">Mon.</label>
@@ -86,16 +84,27 @@
   </form>
 </div>
 
-<script>
+<script type="text/javascript">
   const startTime = document.getElementById("startTime")
+  const result = document.getElementById("usageTime") 
+  const checkbox = document.getElementsByName('days')
+
+  //for(let i = 0; i < 7; i++){
+  // console.log(123)
+  //  for(let n = 0; n < {{lesson.days.length}}; n++){
+  //   if({{lesson.days}}[n] === checkbox[i].value){
+        
+  //     checkbox[i].setAttribute("checked", "true")
+  //   }
+  //  }
+  // }
   startTime.addEventListener("change", (event) => {
-    const result = document.getElementById("usageTime")
     const temp = document.getElementById("hour");
     //避免時間超過9點 所以在20:30只能選30分鐘的課程時長
-    if (event.target.value === "20:30") {
-      result.value = ""
-      temp.setAttribute("disabled", "true")
-    } else {
+    if(event.target.value === "20:30"){
+      result.value = "" 
+      temp.setAttribute("disabled","true")
+    }else{
       temp.removeAttribute("disabled")
     }
     result.removeAttribute("disabled")
