--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,50 +2,65 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-10 mx-auto">
-      <form class="row" action="/admin/categories/{{category.id}}?_method=PUT" method="POST">
+      <form class="row" action="/tutor" method="get">
         <div class="col-11">
-          <input class="form-control" type="text" placeholder="name" name="name" value="{{category.name}}">
+          <input class="form-control" type="text" placeholder="name" name="keyword" value="{{keywords}}">
         </div>
         <div class="col-1">
           <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
         </div>
       </form>
-      <div class="row row-cols-sm-3">
+      <div class="row row-cols-sm-3 mt-5">
         {{#each teachers}}
-        <div class="col">
-          <div class="card mb-1">
-            <div class="card mb-3">
-              <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
-              <div class="card-body p-3">
-                <h6 class="card-title mb-1">{{this.name}}</h6>
-
-                <div class="restaurant-category mb-1">
-                  <i class="fas fa-utensils pr-2"></i> {{this.category}}
+          <div class="col-md-4">
+            <a class="btn" href="/teachersprofileforstudent/{{this.id}}">
+            <div class="card mb-3 shadow-sm"  style="height: 200px">
+              <div class="row g-0">
+                <div class="col-md-5">
+                  <img class="card-img-top" src="{{this.avatar}}" alt="{{this.name}}">
                 </div>
-
-                <span class="badge badge-pill badge-danger font-weight-normal">
-                  {{this.rating}}
-                  <i class="fas fa-star fa-xs"></i>
-                </span>
-              </div>
-              <div class="col-auto d-flex justify-content-end flex-wrap">
-                <a class="btn btn-secondary" href="/restaurants/{{this._id}}" class="text-secondary">detail</a>
-                <a class="btn btn-success" href="/restaurants/{{ this._id }}/edit">edit</a>
-                <form action="/restaurants/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
-                  <button class="btn btn-danger" type="submit">delete</button>
-                </form>
+                <div class="col-md-7">
+                  <div class="card-body">
+                    <h5 class="card-title">{{this.name}}</h5>
+                    <p>{{this.teachStyle}}</p>
+                  </div>
+                </div>
               </div>
             </div>
+            </a>
           </div>
-        </div>
         {{/each}}
       </div>
+      <nav class="mt-3" aria-label="page navigation">
+        <ul class="pagination ">
+          <li class="page-item {{#ifEqual pagination.currentPage 1}}disabled{{/ifEqual}}">
+            <a class="page-link" href="tutor?page={{pagination.prev}}&keyword={{../keywords}}" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          {{#each pagination.pages}}
+          {{#ifEqual this ../pagination.currentPage}}
+          <li class="page-item active"><a class="page-link" href="#">{{this}}</a></li>
+          {{else}}
+          <li class="page-item">
+            <a class="page-link" href="tutor?page={{this}}&keyword={{../keywords}}">{{this}}</a>
+          </li>
+          {{/ifEqual}}
+          {{/each}}
+          <li class="page-item {{#ifEqual pagination.currentPage pagination.totalPage}}disabled{{/ifEqual}}">
+            <a class="page-link" href="tutor?page={{pagination.next}}&keyword={{../keywords}}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="col-md-2 col-3 mx-auto">
       
     </div>
   </div>
 </div>
+
 <script type="text/javascript">
   //及時搜尋
 </script>
