--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg fixed-top navbar-light p-3" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand fs-3 fw-bold" href="/"><i class="fa-solid fa-book mx-3"></i>Tutor</a>
+      <a class="navbar-brand fs-3 fw-bold" href="/tutor"><i class="fa-solid fa-book mx-3"></i>Tutor</a>
       {{#if user}}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
