finish profile page views

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item d-inline-flex align-items-center">
-            <a href="/profile/{{user.id}}" class="nav-link">{{user.name}}</a>
+            <a href="/profile" class="nav-link">{{user.name}}</a>
           </li>
           {{#ifCond user.teachStyle user.isAdmin}}
           <li class="nav-item">
