--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,11 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item d-inline-flex align-items-center">
+            {{#if user.teachStyle}}
+            <a href="/teachers/profile" class="nav-link">{{user.name}}</a>
+            {{else}}
             <a href="/profile" class="nav-link">{{user.name}}</a>
+            {{/if}}
           </li>
           {{#ifCond user.teachStyle user.isAdmin}}
           <li class="nav-item">
