--- a/views/teachers/teacherProfile.hbs
+++ b/views/teachers/teacherProfile.hbs
@@ -9,7 +9,7 @@
       <h3>About Me</h3>
       <h5>{{user.introdution}}</h5>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8 ms-5">
         <h3>New Schedule</h3>
         <div class="row d-flex justify-content-evenly my-5" style="height: 150px">
           {{#each lesson}}
@@ -25,20 +25,14 @@
         <h3 class="mb-3">Your Teachstyle</h3>
         <h5 class="my-5">{{user.teachStyle}}</h5>
         <h3 class="mb-3">Recent Reviewed</h3>
-        <div class="row d-flex justify-content-evenly my-5" style="height: 50px">
-          <div class="col-1"><span class=" bg-warning p-2 rounded-circle">4.8</span></div>
-          <div class="card col-11 bg-light mb-5">
-            <div class="card-body">
-              {{!-- 新預約 --}}
-            </div>
-          </div>
-          <div class="col-1"><span class=" bg-warning p-2 rounded-circle">4.8</span></div>
-          <div class="card col-11 bg-light mb-5">
-            <div class="card-body ">
-              {{!-- 新預約 --}}
-            </div>
-          </div>
+        
+        {{#each comment}}
+        <div class="row d-flex justify-content-evenly my-5" style="height: 60px;">
+          <div class="col-1 p-4"><span class=" bg-warning p-2 rounded-circle">{{this.score}}</span></div>
+          <div class="card col-11 bg-light mb-5 p-3 ">{{this.content}}</div>
         </div>
+        {{/each}}
+        
         {{#if user.teachStyle}}
         <div class="text-end">
           <a class="btn btn-primary mt-5" href="/teachers/edit">edit</a>
