--- a/views/teachers/teacherProfileForStudent.hbs
+++ b/views/teachers/teacherProfileForStudent.hbs
@@ -17,23 +17,16 @@
       <h5 class="mb-5">{{teacher.[0].introdution}}</h5>
       <h3 >Your Teachstyle</h3>
       <h5 class="mb-5">{{teacher.[0].teachStyle}}</h5>
-      <h3 class="mb-3">Recent Reviewed</h3>
-      <div class="row d-flex justify-content-evenly my-5" style="height: 50px">
-        <div class="col-1"><span class=" bg-warning p-2 rounded-circle">4.8</span></div>
-        <div class="card col-11 bg-light mb-5">
-          <div class="card-body">
-            {{!-- 新預約 --}}
-          </div>
-        </div>
-        <div class="col-1"><span class=" bg-warning p-2 rounded-circle">4.8</span></div>
-        <div class="card col-11 bg-light mb-5">
-          <div class="card-body ">
-            {{!-- 新預約 --}}
-          </div>
-        </div>
+      <h3 class="mb-3">Lesson History</h3>
+      {{#each comments}}
+      <div class="row d-flex justify-content-evenly my-5" style="height: 60px;">
+        <div class="col-1 p-4"><span class=" bg-warning p-2 rounded-circle">{{this.score}}</span></div>
+        <div class="card col-11 bg-light mb-5 p-3 ">{{this.content}}</div>
       </div>
+      {{/each}}  
     </div>
     <div class="col-md-3 position-relative">
+      {{#unless user.teachStyle}}
       <h3 class="bg-secondary p-3 rounded-3 mb-3">預約上課</h3>
       <form action="/select/{{teacher.[0].id}}" method="post">
         <select type="date" id="startTime" name="startTime" class="form-select" aria-label="Default select example"
@@ -41,20 +34,24 @@
           <option value="" selected disabled>--請選擇時段--</option>
           {{#each teacher}}
             {{#unless this.Lessons.selected}}
-            <option value="{{this.Lessons.startTime}}">{{../lessonTime}}</option>
+            <option value="{{this.Lessons.startTime}}">{{this.lessonTime}}</option>
             {{/unless}}
           {{/each}}
         </select>
         <div class="text-end mt-3"><button type="submit" class="btn btn-primary m-1" id="timeSubmit" data-bs-toggle="modal" data-bs-target="#staticBackdrop" disabled>submit</button></div>
       </form>
+      {{/unless}}
       <div class="position-absolute bottom-0 end-0">
-        <a href="/tutor" >
+        <a href="/tutor">
           <button type="button" class="btn btn-outline-secondary">
             返回首頁
           </button>
         </a>
       </div>
     </div>
+    
+    
+    
   </div>
 </div>
 
