add model comment-to-lesson& finish student profile

--- a/views/teachers/teacherProfile.hbs
+++ b/views/teachers/teacherProfile.hbs
@@ -15,7 +15,7 @@
           {{#each lesson}}
             <div class="card col-5 bg-light">
               <div class="card-body">
-                <div>Time: {{this.startTime}}</div>
+                <div>Time: {{this.lessonTime}}</div>
                 <div>Student's Name: {{this.Student.name}}</div>
                 <div>Link: {{this.link}}</div>
               </div>
