--- a/views/studentProfile.hbs
+++ b/views/studentProfile.hbs
@@ -11,61 +11,73 @@
     <div class="col-md-9">
       <h3>New Schedule</h3>
       <div class="row d-flex justify-content-evenly my-5" style="height: 150px">
+        {{#each lesson}}
         <div class="card col-5 bg-light">
           <div class="card-body">
-            {{!-- 新預約 --}}
+            <div>Time: {{this.lessonTime}}</div>
+            <div>Teacher's Name: {{this.Teacher.name}}</div>
+            <div>Link: {{this.link}}</div>
           </div>
         </div>
-        <div class="card col-5 bg-light">
-          <div class="card-body ">
-            {{!-- 新預約 --}}
-          </div>
-        </div>
+        {{/each}}
       </div>
       <h3 class="mb-3">Lesson History</h3>
-      <div class="row d-flex justify-content-evenly my-5" style="height: 75px">
-        <div class="col-1 bg-primary rounded-circle"><img src="" alt=""></div>
-        <div class="card col-4 bg-light mb-3">
-          <div class="card-body p-3">
-            {{!-- 新預約 --}}
-            <div class="text-end">
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >
-                Score 
-              </button>
+      <div class="row d-flex justify-content-evenly my-5 align-middle">
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[0].Teacher.avatar}}" style="width: 50px;"></div>
+          <div class="card col-5 bg-light mb-3">
+            <div class="card-body p-3 d-flex justify-content-around">
+              <h4>{{lessonUnscored.[0].Teacher.name}}</h4>
+              <div>
+                <button id="inputComment" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" value="{{lessonUnscored.[0].lessonTime}}">
+                  Score
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-1 bg-primary rounded-circle"><img src="" alt=""></div>
-        <div class="card col-4 bg-light">
-          <div class="card-body p-3">
-            {{!-- 新預約 --}}
-            <div class="text-end">
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                Score
-              </button>
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[1].Teacher.avatar}}" style="width: 50px;"></div>
+          <div class="card col-5 bg-light mb-3">
+            <div class="card-body p-3 d-flex justify-content-around">
+              <h4>{{lessonUnscored.[1].Teacher.name}}</h4>
+              <div>
+                <button id="inputComment1" type="button" class="btn btn-primary" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop" value="{{lessonUnscored.[1].lessonTime}}">
+                  Score
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="row d-flex justify-content-evenly my-5" style="height: 75px">
-        <div class="col-1 bg-primary rounded-circle"><img src="" alt=""></div>
-        <div class="card col-4 bg-light">
-          <div class="card-body">
-            {{!-- 新預約 --}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[2].Teacher.avatar}}" style="width: 50px;"></div>
+          <div class="card col-5 bg-light mb-3">
+            <div class="card-body p-3 d-flex justify-content-around">
+              <h4>{{lessonUnscored.[2].Teacher.name}}</h4>
+              <div>
+                <button id="inputComment2" type="button" class="btn btn-primary" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop" value="{{lessonUnscored.[2].lessonTime}}">
+                  Score
+                </button>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-1 bg-primary rounded-circle"><img src="" alt=""></div>
-        <div class="card col-4 bg-light">
-          <div class="card-body ">
-            {{!-- 新預約 --}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[3].Teacher.avatar}}" style="width: 50px;"></div>
+          <div class="card col-5 bg-light mb-3">
+            <div class="card-body p-3 d-flex justify-content-around">
+              <h4>{{lessonUnscored.[0].Teacher.name}}</h4>
+              <div>
+                <button id="inputComment3" type="button" class="btn btn-primary" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop" value="{{lessonUnscored.[3].lessonTime}}">
+                  Score
+                </button>
+              </div>
+            </div>
           </div>
+      </div> 
+      <div class="mt-5">
+        <h1>我的學習時數名次: 1</span></h1>
+        <div class="text-end">
+          <a class="btn btn-primary mt-5" href="/edit">edit</a>
         </div>
       </div>
-
-      <h1 class="my-5-3">我的學習時數名次: 1</span></h1>
-      <div class="text-end">
-        <a class="btn btn-primary mt-5" href="/edit">edit</a>
-      </div>
+      
       
     </div>
   </div>
@@ -78,6 +90,10 @@
       <div class="modal-body">
         <form action="/edit?_method=PUT" method="POST">
           <h5>分享此次的課程體驗</h5>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Time:</label>
+            <input type="text" class="form-control" id="time" disabled>
+          </div>
           <div class="mb-3">
             <label for="recipient-name" class="col-form-label">Score:</label>
             <input type="text" class="form-control" id="recipient-name">
@@ -93,3 +109,23 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  const inputComment = document.getElementById("inputComment")
+  const inputComment1 = document.getElementById("inputComment1")
+  const inputComment2 = document.getElementById("inputComment2")
+  const inputComment3 = document.getElementById("inputComment3")
+  const time = document.getElementById("time")
+  inputComment.addEventListener("click", (event) => {
+    time.value = event.target.value
+  })
+  inputComment1.addEventListener("click", (event) => {
+    time.value = event.target.value
+  })
+  inputComment2.addEventListener("click", (event) => {
+    time.value = event.target.value
+  })
+  inputComment3.addEventListener("click", (event) => {
+    time.value = event.target.value
+  })
+</script>
