--- a/views/studentProfile.hbs
+++ b/views/studentProfile.hbs
@@ -1,3 +1,4 @@
+{{>messages}}
 <div class="container my-3">
   <div class="row no-gutters">
     <div class="col-md-3">
@@ -23,7 +24,8 @@
       </div>
       <h3 class="mb-3">Lesson History</h3>
       <div class="row d-flex justify-content-evenly my-5 align-middle">
-          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[0].Teacher.avatar}}" style="width: 50px;"></div>
+        {{#if lessonUnscored.[0].Teacher.name}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[0].Teacher.avatar}}" alt=" " style="width: 50px;"></div>
           <div class="card col-5 bg-light mb-3">
             <div class="card-body p-3 d-flex justify-content-around">
               <h4>{{lessonUnscored.[0].Teacher.name}}</h4>
@@ -34,7 +36,9 @@
               </div>
             </div>
           </div>
-          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[1].Teacher.avatar}}" style="width: 50px;"></div>
+          {{/if}}
+          {{#if lessonUnscored.[1].Teacher.name}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[1].Teacher.avatar}}" alt=" " style="width: 50px;"></div>
           <div class="card col-5 bg-light mb-3">
             <div class="card-body p-3 d-flex justify-content-around">
               <h4>{{lessonUnscored.[1].Teacher.name}}</h4>
@@ -46,7 +50,9 @@
               </div>
             </div>
           </div>
-          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[2].Teacher.avatar}}" style="width: 50px;"></div>
+          {{/if}}
+          {{#if lessonUnscored.[2].Teacher.name}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[2].Teacher.avatar}}" alt=" " style="width: 50px;"></div>
           <div class="card col-5 bg-light mb-3">
             <div class="card-body p-3 d-flex justify-content-around">
               <h4>{{lessonUnscored.[2].Teacher.name}}</h4>
@@ -58,10 +64,12 @@
               </div>
             </div>
           </div>
-          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[3].Teacher.avatar}}" style="width: 50px;"></div>
+          {{/if}}
+          {{#if lessonUnscored.[3].Teacher.name}}
+          <div class="col-1 rounded-circle my-2"><img src="{{lessonUnscored.[3].Teacher.avatar}}" alt=" " style="width: 50px;"></div>
           <div class="card col-5 bg-light mb-3">
             <div class="card-body p-3 d-flex justify-content-around">
-              <h4>{{lessonUnscored.[0].Teacher.name}}</h4>
+              <h4>{{lessonUnscored.[3].Teacher.name}}</h4>
               <div>
                 <button id="inputComment3" type="button" class="btn btn-primary" data-bs-toggle="modal"
                   data-bs-target="#staticBackdrop" value="{{lessonUnscored.[3].lessonTime}}">
@@ -70,9 +78,10 @@
               </div>
             </div>
           </div>
+          {{/if}}
       </div> 
       <div class="mt-5">
-        <h1>我的學習時數名次: 1</span></h1>
+        <h1>我的學習時數名次: {{rank}}</span></h1>
         <div class="text-end">
           <a class="btn btn-primary mt-5" href="/edit">edit</a>
         </div>
@@ -88,19 +97,20 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <form action="/edit?_method=PUT" method="POST">
+        <form action="/newComment" method="POST">
           <h5>分享此次的課程體驗</h5>
+          
           <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Time:</label>
-            <input type="text" class="form-control" id="time" disabled>
+            <label for="recipient-name" class="col-form-label" >Time:</label>
+            <input type="text" name="time" class="form-control" id="time">
           </div>
           <div class="mb-3">
             <label for="recipient-name" class="col-form-label">Score:</label>
-            <input type="text" class="form-control" id="recipient-name">
+            <input type="number" name="score" class="form-control" id="recipient-name" max="5" min="1" required>
           </div>
           <div class="mb-3">
             <label for="message-text" class="col-form-label">Comment:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+            <textarea name="comment" class="form-control" id="message-text"></textarea>
           </div>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="submit" class="btn btn-primary">Submit</button>
