--- a/views/teachers/teacherProfileForStudent.hbs
+++ b/views/teachers/teacherProfileForStudent.hbs
@@ -9,7 +9,7 @@
         <div class="col-6 mt-5">
           <h1 class="my-5">{{teacher.[0].name}}</h1>
           <h4>nation: {{teacher.[0].nation}}</h4>
-          <h4 class="mb-5">score: {{teacher.[0].avgScore}}</h4>
+          <h4 class="mb-5">score: {{teacher.avgScore}}</h4>
         </div>
       </div>
       
