--- a/views/userList.hbs
+++ b/views/userList.hbs
@@ -1,22 +1,59 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">id</th>
-      <th scope="col">name</th>
-      <th scope="col">是否成為老師</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each users}}
-    <tr>
-      <th scope="row">{{this.id}}</th>
-      <td>{{this.name}}</td>
-      {{#if this.teachStyle}}
-      <td>True</td>
-      {{else}}
-      <td>False</td>
-      {{/if}}
-    </tr>
-    {{/each}}
-  </tbody>
-</table>
+<div class="container mt-5">
+  <form class="row" action="/admin" method="get">
+    <div class="col-11">
+      <input class="form-control" type="text" placeholder="name" name="keyword" value="{{keywords}}">
+    </div>
+    <div class="col-1">
+      <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+    </div>
+  </form>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">name</th>
+        <th scope="col">是否成為老師</th>
+        <th scope="col">自我介紹</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each users}}
+      <tr>
+        <th scope="row">{{this.id}}</th>
+        <td>{{this.name}}</td>
+        {{#if this.teachStyle}}
+        <td>True</td>
+        {{else}}
+        <td>False</td>
+        {{/if}}
+        <td>{{this.subIntrodution}}</td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+  <div class="text-center">
+    <nav class="mt-3" aria-label="page navigation">
+      <ul class="pagination ">
+        <li class="page-item {{#ifEqual pagination.currentPage 1}}disabled{{/ifEqual}}">
+          <a class="page-link" href="admin?page={{pagination.prev}}&keyword={{../keywords}}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        {{#each pagination.pages}}
+        {{#ifEqual this ../pagination.currentPage}}
+        <li class="page-item active"><a class="page-link" href="#">{{this}}</a></li>
+        {{else}}
+        <li class="page-item">
+          <a class="page-link" href="admin?page={{this}}&keyword={{../keywords}}">{{this}}</a>
+        </li>
+        {{/ifEqual}}
+        {{/each}}
+        <li class="page-item {{#ifEqual pagination.currentPage pagination.totalPage}}disabled{{/ifEqual}}">
+          <a class="page-link" href="admin?page={{pagination.next}}&keyword={{../keywords}}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
