check all function

--- a/views/teachers/teacherProfile.hbs
+++ b/views/teachers/teacherProfile.hbs
@@ -5,7 +5,7 @@
         style="width: 300px; transition: opacity 0.5s; opacity:0;" onload="this.style.opacity=1;"/>
       <h1 class="my-5">{{user.name}}</h1>
       <h4>nation: {{user.nation}}</h4>
-      <h4 class="mb-5">score: {{user.avgScore}}</h4>
+      <h4 class="mb-5">score: {{information.avgScore}}</h4>
       <h3>About Me</h3>
       <h5>{{user.introdution}}</h5>
     </div>
